<resources>
    <string name="app_name">mGmail</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Settings</string>
    <string name="action_delete">Settings</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cc">Cc</string>
    <string name="bcc">Bcc</string>
    <string name="subject">Subject</string>
    <string name="compose_mail">Compose email</string>
    <string name="compose">Compose</string>
    <string name="archive">Archive</string>
    <string name="mark_read">Mark as Read</string>
    <string name="move_to">Move To</string>
    <string name="change_labels">Change Labels</string>
    <string name="report_spam">Report Spam</string>
    <string name="primary">Primary</string>
    <string name="social">Social</string>
    <string name="promotions">Promotions</string>
    <string name="updates">Updates</string>
    <string name="forums">Forums</string>
    <string name="user_name">Navneet Singh</string>
    <string name="user_email">rathore.singhnav@gmail.com</string>
    <string name="search_hint">Enter subject</string>
</resources>
