<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:mContext="com.example.soc_macmini_15.inboxlikegmail.Activity.MainActivity">


    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive_black_24dp"
        android:orderInCategory="100"
        android:title="@string/archive"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_read"
        android:icon="@drawable/ic_markunread_black_24dp"
        android:orderInCategory="100"
        android:title="@string/mark_read"
        app:showAsAction="always" />

    <item
        android:title="@string/move_to"
        android:id="@+id/action_move_to"
        android:orderInCategory="100"
        />
    <item
    android:title="@string/change_labels"
    android:id="@+id/action_change_label"
    android:orderInCategory="100"
    />
    <item
    android:title="@string/report_spam"
    android:id="@+id/action_report_spam"
    android:orderInCategory="100"
    />



</menu>